--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1 class="title">[Your Report Title]</h1>
+                <h1 class="title">Implementation of Federal Clean Energy Programs: Lessons Learned from DOE and Partner Agencies</h1>
                 <p class="subtitle">[Brief subtitle or tagline describing the report]</p>
                 <p class="meta">Published: October 2025 | Author: [Your Name]</p>
                 <a href="your-report.pdf" class="cta-button" download>Download PDF</a>
