--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="container">
                 <h1 class="title">Implementation of Federal Clean Energy Programs: Lessons Learned from DOE and Partner Agencies</h1>
                 <p class="subtitle">[Brief subtitle or tagline describing the report]</p>
-                <p class="meta">Published: October 2025 | Author: [Your Name]</p>
-                <a href="your-report.pdf" class="cta-button" download>Download PDF</a>
+                <p class="meta">Published: October 2025 | Authors: Ramsey Fahs, Alan Propp, Louise White</p>
+                <a href="your-report.pdf" class="cta-button" download>Read the report</a>
             </div>
         </section>
 
