--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <h2>About This Report</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>[Provide context about the report. What problem does it address? Why is it important? Who is the intended audience? What methodology was used?]</p>
-                        <p>[You can add additional paragraphs here to provide more detail about the research process, data sources, or scope of the study.]</p>
+                        <p>This report distills insights from more than 80 former federal staff and clean energy implementers who led the rollout of the Bipartisan Infrastructure Law and Inflation Reduction Act. It examines why translating historic investments into real-world projects proved so difficult—and what can be done differently next time.</p>
                     </div>
                 </div>
             </div>
