Add authors' biographies to the index.html
Added an 'About The Authors' section with biographies.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
             </div>
         </section>
 
+        <section class="about">
+            <div class="container">
+                <h2>About The Authors</h2>
+                <div class="about-content">
+                    <div class="about-text">
+                        <p>Ramsey Fahs worked at DOE’s Office of Clean Energy Demonstrations & Loan Programs Office.  </p>
+                        <p>Alan Propp worked at the DOE’s Loan Programs Office from 2023-25, where he helped implement billions in clean energy financing. Previously, he served as Senior Policy Advisor to the Deputy Mayor for Operations & Infrastructure in Washington, DC, and worked at Delivery Associates as an implementation consultant with cities across the country on the American Cities Climate Challenge. He is currently a Principal at Blue Crab Strategies. Alan holds a B.A. and M.A. from Stanford University and is based in Washington, DC.  </p>
+                        <p>Louise White worked at DOE  Loan Programs Office and Office of Technology Transitions  </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <section id="download" class="download-section">
             <div class="container">
                 <h2>Access the Full Report</h2>
