--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Report - [Your Report Title]</title>
+    <title>Clean Energy Implementation Rerport</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,6 @@
         <section class="hero">
             <div class="container">
                 <h1 class="title">Implementation of Federal Clean Energy Programs: Lessons Learned from DOE and Partner Agencies</h1>
-                <p class="subtitle">[Brief subtitle or tagline describing the report]</p>
                 <p class="meta">Published: October 2025 | Authors: Ramsey Fahs, Alan Propp, Louise White</p>
                 <a href="implementation-report.pdf" class="cta-button" target="_blank">Read the Report</a>
             </div>
@@ -43,18 +42,11 @@
             </div>
         </section>
         
-        <section id="download" class="download-section">
-            <div class="container">
-                <h2>Access the Full Report</h2>
-                <p>Download the complete report to explore the detailed analysis, methodology, and recommendations.</p>
-                <a href="your-report.pdf" class="cta-button secondary" download>Download PDF Report</a>
-            </div>
-        </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 [Your Name/Organization]. All rights reserved.</p>
+            <p>&copy; 2025 </p>
             <p class="contact">Contact: [your.email@example.com]</p>
         </div>
     </footer>
