--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 </p>
-            <p class="contact">Contact: cleanenergyimplementation@gmail.com</p>
+            <p class="contact">Questions or feedback? Email us at cleanenergyimplementation@gmail.com</p>
         </div>
     </footer>
 </body>
