Revise author bios and add LinkedIn profiles
Updated author information with LinkedIn links and consolidated text.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                 <h2>About The Authors</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Ramsey Fahs worked at DOE’s Office of Clean Energy Demonstrations & Loan Programs Office.  </p>
-                        <p>Alan Propp worked at the DOE’s Loan Programs Office from 2023-25, where he helped implement billions in clean energy financing. Previously, he served as Senior Policy Advisor to the Deputy Mayor for Operations & Infrastructure in Washington, DC, and worked at Delivery Associates as an implementation consultant with cities across the country on the American Cities Climate Challenge. He is currently a Principal at Blue Crab Strategies. Alan holds a B.A. and M.A. from Stanford University and is based in Washington, DC.  </p>
-                        <p>Louise White worked at DOE  Loan Programs Office and Office of Technology Transitions  </p>
+                        <p><a href="https://www.linkedin.com/in/ramsey-fahs/">Ramsey Fahs</a>, <a href="https://www.linkedin.com/in/alan-propp-9073663a/">Alan Propp</a>, and <a href="https://www.linkedin.com/in/louise-g-white/">Louise White</a> worked at DOE's Loan Programs Office, Office of Clean Energy Demonstraitons and Office of Technology Transitions during the Biden administration</p>
                     </div>
                 </div>
             </div>
