--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>About The Authors</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p><a href="https://www.linkedin.com/in/ramsey-fahs/">Ramsey Fahs</a>, <a href="https://www.linkedin.com/in/alan-propp-9073663a/">Alan Propp</a>, and <a href="https://www.linkedin.com/in/louise-g-white/">Louise White</a> worked at DOE's Loan Programs Office, Office of Clean Energy Demonstraitons and Office of Technology Transitions during the Biden administration</p>
+                        <p><a href="https://www.linkedin.com/in/ramsey-fahs/">Ramsey Fahs</a>, <a href="https://www.linkedin.com/in/alan-propp-9073663a/">Alan Propp</a>, and <a href="https://www.linkedin.com/in/louise-g-white/">Louise White</a> worked at DOE's Loan Programs Office, Office of Clean Energy Demonstraitons and Office of Technology Transitions during the Biden administration.</p>
                     </div>
                 </div>
             </div>
